2012-05-17 Riccardo Mottola <rm@gnu.org>

	* AppController.m
	Fix wrong format specifier.

2012-03-28 Riccardo Mottola <rm@gnu.org>

	* Components/ArticleTable/ArticleTablePlugin.m
	* Components/DatabaseOperations/DatabaseOperations.m
	* Components/DatabaseTreeView/DatabaseTreeViewController.m
	* Components/SubscriptionPanel/SubscriptionPanel.m
	Change indexes to NSInteger / NSUInteger

2011-11-29 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>

	* GNUmakefile.preamble
	Do not override ADDITIONAL_GUI_LIBS

2011-10-15 Riccardo Mottola <rm@gnu.org>

	* Compontents/ArticleView/English.lproj/ArticleTextViewPlugin.gorm
	Fixed order of the title text field.

2011-10-13 Riccardo Mottola <rm@gnu.org>

	* Compontents/ArticleView/English.lproj/ArticleTextViewPlugin.gorm
	Recreated to set new text style defaults.

2011-07-22 Riccardo Mottola <rm@gnu.org>

	* Components/ArticleView/NSString+TolerantHTML.m
	Display the absolute URL as ToolTip.

2011-07-19 Riccardo Mottola <rm@gnu.org>

	* Components/ArticleView/NSString+TolerantHTML.m
	Fixed parser, the handler tables were inited wrongly.
	Furthermore, set standard link attributes.

2011-07-12 Riccardo Mottola <rm@gnu.org>

	* Resources/Data/HTML-Entities.plist
	Transformed array ito string values removing GNUstep encoding.

2011-07-03 Riccardo Mottola <rm@gnu.org>

	* English.lproj
	* Grr.xcode
	Updated project to build on Panther by using a GrrFramework. Compiling and linking those
	Objects multiple times confused the Panther linker and runtime with multiple copies.

2011-07-03 Fred Kiefer

	* PipeType.h
	* PipeType.m
	Simplify allocation.

2011-07-01 Riccardo Mottola <rm@gnu.org>

	* ArticleFactory.m
	* Category.m
	* DatabaseElement.h
	* Feed.h
	* Feed.m
	* PreferencesComponent.m

	Adapt to RSSKit protocol changes.

	* Resources/Icons/AddCategory.tiff
	* Resources/Icons/AddFeed.tiff
	* Resources/Icons/ArticleLink.tiff
	* Resources/Icons/Category.tiff
	* Resources/Icons/DeleteCategory.tiff